дата рождения при регистрации

--- a/application/modules/admin/views/scripts/tasks/view.phtml
+++ b/application/modules/admin/views/scripts/tasks/view.phtml
@@ -33,6 +33,10 @@
                 <strong>Стоимость:</strong> <?= $this->task['customers_price'] ?>
                 
             </div>
+            <div class="col-lg-12">
+                <strong>Описание:</strong> <?= $this->task['description'] ?>
+                
+            </div>
 
         </div>
         <div class="col-lg-12">
