--- a/application/modules/default/views/scripts/performers/view.phtml
+++ b/application/modules/default/views/scripts/performers/view.phtml
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="breadcrumbDiv col-lg-12">
       <ul class="breadcrumb">
-          <li> <a href="<?= $this->baseUrl().'/customer/' ?>">Главная</a> </li>
-          <li> <a href="<?= $this->baseUrl().'/customer/office/' ?>">Исполнитель</a> </li>
-        <li class="active"><?= $this->performer['username'].' '.$this->performer['surname'] ?> </li>
+          <li> <a href="<?= $this->baseUrl().'/' ?>">Главная</a> </li>
+          <li> <a href="<?= $this->baseUrl().'/default/performers/' ?>">Исполнитель</a> </li>
+        <li class="active"><?= $this->performer['username'].' '.nb_substr($this->performer['surname'],0,1,'utf-8') ?> </li>
       </ul>
     </div>
   </div>
@@ -26,7 +26,7 @@
     
     <!-- right column -->
     <div class="col-lg-6 col-md-6 col-sm-5">
-      <h1 class="product-title"><?= $this->performer['username'].' '.substr($this->performer['surname'], 0, 1).'.' ?></h1>
+      <h1 class="product-title"><?= $this->performer['username'].' '.mb_substr($this->performer['surname'], 0, 1, 'utf-8').'.' ?></h1>
       <?php $sec = time()-$this->performer['birth_date'];
             $age = $sec/31556926;
             $age = floor($age);
