--- a/application/modules/performer/views/scripts/task/performers-view.phtml
+++ b/application/modules/performer/views/scripts/task/performers-view.phtml
@@ -271,7 +271,7 @@
             <?php foreach($this->prepositions as $preposition){?>
             <tr id="tr<?= $preposition['u_id'] ?>">
                 <td>
-                    <a href="<?= $this->baseUrl()."/performer/performers/performer-view/id/".$preposition['performer_id'] ?>"><?= $preposition['u_username'] ?></a>
+                    <a href="<?= $this->baseUrl()."/performer/performers/performer-view/id/".$preposition['performer_id'] ?>"><?= $preposition['u_username'].' '.mb_substr($preposition['u_surname'], 0, 1,'utf-8').'.' ?></a>
                 </td>
                 <td>
                     <?= $preposition['rating'] ?>
@@ -423,7 +423,6 @@ function sendComment(){
         if(data === 'true'){
             $('#sendCommentPrel').hide();
             $('#sendCommentButton').show();
-            alert('Сообщение отправлено');
             var url = '<?= $this->baseUrl().'/performer/task/performers-view/id/'.$this->task['id'] ?>';
             window.location.href = url;
         }
