--- a/application/modules/performer/views/scripts/user/index.phtml
+++ b/application/modules/performer/views/scripts/user/index.phtml
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="breadcrumbDiv col-lg-12">
               <ul class="breadcrumb">
-                  <li> <a href="<?= $this->baseUrl() ?>">Главная</a> </li>
+                  <li> <a href="<?= $this->baseUrl().'/performer/index/tasks' ?>">Главная</a> </li>
                  <li class="active" >Личный кабинет</li>
               </ul>
         </div>
