--- a/application/modules/customer/views/scripts/contacts/index.phtml
+++ b/application/modules/customer/views/scripts/contacts/index.phtml
@@ -1,7 +1,7 @@
     <div class="row">
         <div class="breadcrumbDiv col-lg-12">
               <ul class="breadcrumb">
-                  <li> <a href="<?= $this->baseUrl() ?>">Главная</a> </li>
+                  <li> <a href="<?= $this->baseUrl().'/customer/index' ?>">Главная</a> </li>
                  <li class="active" >Контакты</li>
               </ul>
         </div>
