--- a/application/modules/customer/views/scripts/performers/index.phtml
+++ b/application/modules/customer/views/scripts/performers/index.phtml
@@ -10,11 +10,13 @@
         <div class="pull-right ">
 
           <div class="change-view pull-right">
-              <a href="#" title="Grid" class="grid-view">
-                  <i class="fa fa-th-large"></i> </a>
-              <a href="#" title="List" class="list-view ">
+              <a href="#" title="List" id="listView" class="list-view">
                   <i class="fa fa-th-list"></i>
               </a> 
+              <a href="#" title="Grid" class="grid-view">
+                  <i class="fa fa-th-large"></i>
+              </a>
+              
           </div>
         </div>
       </div>
@@ -22,7 +24,7 @@
       <div class="row  categoryProduct xsResponse clearfix">
         <?php foreach($this->performers as $performer){?>  
          
-            <div class="item col-sm-4 col-lg-4 col-md-4 col-xs-6">
+            <div class="item col-sm-4 col-lg-4 col-md-4 col-xs-6 list-view">
               <div class="product">
 
                 <div class="image">  
