--- a/application/modules/default/views/scripts/performers/index.phtml
+++ b/application/modules/default/views/scripts/performers/index.phtml
@@ -22,7 +22,7 @@
       <div class="row  categoryProduct xsResponse clearfix">
         <?php foreach($this->performers as $performer){?>  
          
-            <div class="item col-sm-4 col-lg-4 col-md-4 col-xs-6">
+            <div class="item col-sm-4 col-lg-4 col-md-4 col-xs-6 list-view">
               <div class="product">
 
                 <div class="image">  
